Add documentView, tooltip button to remove or view event, add some comments and cleanup some code

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,8 @@
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/vue3": "^6.1.18",
+    "@harbour-enterprises/superdoc": "^0.14.9-rev1",
+    "@iconoir/vue": "^7.11.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
